--- a/style.css
+++ b/style.css
@@ -4,12 +4,20 @@ html {
 }
 
 
-  h1{text-align: center;
-    }
+h1 {
+  text-decoration: underline;
+  text-align: center;
+  color: #b1dd8c;
+font-family: "gill sans", sans-serif;  
+}
 
+h2 {
+  color: #fff76b;
+  text-align: center;
+}
 
-ul{ 
-   border: 5px solid gray;
+ul {
+  border: 5px solid gray;
   padding: 5px;
   margin: 5px;
   word-spacing: 10px;
@@ -17,29 +25,29 @@ ul{
   margin-left: auto;
   margin-right: auto;
   width: 50%;
-a{
-  color: black;
 }
 
-text-align:center;
+  a {
+    color: #ffffff;
   }
 
+ 
 
 li {
   display: inline;
-       }
+   text-align:center;
+}
 
 p {
   width: 70%;
-  background-color: skyblue;
-  color: black;
-  } 
-
-body{
-  background-color: skyblue;
+  background-color: #d6d6d6;
+  color: #0056d6;
 }
 
+body {
+  background-color: #aaaaaa;
+}
 
-
-
-
+nav {
+  background-color: #12070c;
+}
